Add your book page

--- a/src/app.json
+++ b/src/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index/index",
+    "pages/your-lib/index"
   ],
   "window": {
     "defaultTitle": "Book Exchange"
